[gd_scene load_steps=2 format=3 uid="uid://islw187lc0mp"]

[ext_resource type="Script" path="res://scripts/Managers/microgame_manager.gd" id="1_vlvpw"]

[node name="MicrogameManager" type="Node2D"]
script = ExtResource("1_vlvpw")

[node name="BetweenMicrogames" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AfterWordPopUp" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BetweenMicrogames" to="." method="_on_between_microgames_timeout"]
[connection signal="timeout" from="AfterWordPopUp" to="." method="_on_after_word_pop_up_timeout"]
